2.0.19
  - Fixed resourcepack for 1.21.x
  - 1.21.5 support
  - Fixed towny explosions
  - Fixed slowness issue
  - Add option to disable recoil based on move
  - Added headshot blacklist
  - Fixed ammo in exp bar

2.0.18
  - Fixed resourcepack for 1.21.4

2.0.17
  - 1.21.4 support
  - Fixed gun duplication
  - Fixed gun protection

2.0.16
  - Fixed invalid air drop
  - 1.21.3 support
  - Fixed craft amount
  - Added force resourcepack support

2.0.15
  - Fixed 1.21 support
  - Fixed BurstFire charging

2.0.14.1
  - Fixed 1.21 support

2.0.14
  - 1.21 support
  - Added craft item command

2.0.13
  - 1.20.6 support
  - Fixed Sentinel integration

2.0.12
  - 1.20.4 support
  - Fixed reload while aiming
  - Fixed QAGunGiveEvent not being called by iLoopBreak
  - Fixed GUI management
  - Fixed offhand management

2.0.11
  - 1.20.2 support
  - Fixed ProtocolLib support
  - Stopped aim on player leave
  - Fixed ammo duplication
  - Fixed durability lang

2.0.10
  - 1.20 support
  - Fixed ammo update when IronSights is enabled
  - Fixed various ammo duplication issues
  - Added option to disable crafting
  - Auto load guns on /qa give
  - Updated dependencies
  - Fixed rpg damage

2.0.9
  - Fixed ammo reload
  - Added block regen feature
  - Fixed ammo duplication
  - Fixed grenades and mines

2.0.8.2
  - Fixed severe ammo issue. Ammo was not being properly consumed when firing weapons

2.0.8.1
  - Fixed NBTAPI dependency

2.0.8
  - Fixed mimic support
  - Added explode event
  - Added GriefPrevention support
  - Now the gun doesn't go "up and down" when firing
  - QualityArmory-Resourcepack: 1.19.3 support

2.0.7
  - Fixed worldguard protection
  - Fixed chestshop support
  - Added PlaceholderAPI placeholders
  - Added Mimic support
  - 1.19 support
  - Fixed ProtocolLib support
  - Minor fixes

2.0.6
  - Added ammobags
  - Performance fixes
  - Fixed protection support
  - Bump resourcepack version
  - Updated LightAPI support
  - Fixed WorldGuard hook